# 3delight-for-houdini

./: CMakeLists.txt  LICENSE  MainMenuCommon.xml  OBJ_IncandescenceLight.cpp  OBJ_IncandescenceLight.h  README.md  ROP_3Delight.cpp  ROP_3Delight.h  VOP_3DelightMaterialBuilder.cpp  VOP_3DelightMaterialBuilder.h  VOP_AOVGroup.cpp  VOP_AOVGroup.h  VOP_ExternalOSL.cpp  VOP_ExternalOSL.h  alembic.cpp  alembic.h  aov.cpp  aov.h  attributes_callbacks.cpp  attributes_callbacks.h  build  camera.cpp  camera.h  context.cpp  context.h  cop_utilities.cpp  cop_utilities.h  creation_callbacks.cpp  creation_callbacks.h  curvemesh.cpp  curvemesh.h  dlAOVGroup.cpp  dlAOVGroup.h  dl_system.cpp  dl_system.h  exporter.cpp  exporter.h  geometry.cpp  geometry.h  idisplay_port.cpp  (+53 more)
Solaris/: HdNSIRendererPlugin_Geometry.ds  HdNSIRendererPlugin_Global.ds  HdNSIRendererPlugin_Viewport.ds  plugInfo.json
Solaris/husdshadertranslators/: __init__.py  nsi.py
osl/: CMakeLists.txt  bind.osl  dlAOVGroup.osl  environmentlight.osl  hlight.osl  makexform.osl  passthrough.osl  principledshader__2_0.osl  texture__2_0.osl  utils.h  uv_reader.osl
scripts/: 456.cmd
soho/parameters/: 3Delight.ds  SOHOparameters
toolbar/: 3Delight.shelf
ui/: 3Delight--VOP_OnCreated.cmd  3Delight-IncandescenceLight_OnCreated.py  3Delight.ds  3Delight.shelf  3Delight_OnCreated.py  MainMenuCommon.xml  VOPFXmenu.xml  aov.cpp  aov.h  cam_OnCreated.cmd  delightvopfxmenu.py  envlight_OnCreated.cmd  geo_OnCreated.cmd  hlight--2.0_OnCreated.cmd  instance_OnCreated.cmd  null_OnCreated.cmd  select_layers_dialog.cpp  select_layers_dialog.h  select_layers_ui.ui  settings.cpp  settings.h
